# research

./: .coverage  .gitignore  README.md  RESEARCH.md  WORKSPACE.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
configs/: default.yaml
docker/: Dockerfile.edge  Dockerfile.server  docker-compose.yml
docs/: architecture.md  roadmap.md
fedns_traffic.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
scripts/: evaluate.py  train.py
src/agents/: __init__.py  baselines.py  dqn_agent.py
src/environment/: __init__.py  cityflow_env.py  state_representation.py  sumo_env.py
src/utils/: __init__.py  config.py  metrics.py
tests/: __init__.py  test_agent.py  test_environment.py  test_utils.py
