[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fedns-traffic"
version = "0.1.0"
description = "FedNS-Traffic: Federated Neuro-Symbolic Multi-Agent RL for Smart Traffic Management"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "FedNS-Traffic Research Team" }]

dependencies = [
    "torch>=2.1.0",
    "numpy>=1.26.0",
    "gymnasium>=0.29.0",
    "pyyaml>=6.0",
    "scipy>=1.11.0",
    "networkx>=3.2.0",
    "matplotlib>=3.8.0",
    "tqdm>=4.66.0",
    "tensorboard>=2.15.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
    "black>=23.0.0",
    "pre-commit>=3.5.0",
]
sumo = [
    "traci>=1.18.0",
    "sumolib>=1.18.0",
]
all = ["fedns-traffic[dev,sumo]"]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=src --cov-report=term-missing --cov-fail-under=65"

[tool.coverage.run]
omit = [
    "src/environment/sumo_env.py",
    "src/environment/cityflow_env.py",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.black]
line-length = 100
target-version = ["py310"]
